2007-03-010  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.(cpp,h):
	hash< as_object_interface*, .. ==> hash< smart_ptr<as_object_interface>, ..
	to prevent premature deleting of object

2007-03-010  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/win32/VC8/gameswf.vcproj: dlmalloc.(c,h) are removed from project
	because there are enough VC8++ toolkit
	* gameswf/gameswf_netstream.(cpp,h): removed useless struct netstream
	* gameswf/gameswf.h,
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_sound_handler.(cpp,h): void* ==> as_object_interface

2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: class video_stream_instance ==> struct ...
	* gameswf/gameswf_video_impl.(cpp,h): pointers ==> smart_ptr<>
	* gameswf/gameswf_as_classes/as_netconnection.(cpp,h): updated comments

2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>

	added the processing of events from video thread (onStatus)
	* gameswf/gameswf_mutex.(cpp,h):
	* gameswf/gameswf_sound_handler_sdl.(cpp,h): struct locker
	moved from sound_handler files into gameswf_mutex files
	* gameswf/gameswf_action.h: commented the unused call_method1..3
	* gameswf/gameswf_action.cpp: added as_netconnection include
	* gameswf/gameswf_root.cpp: added the locking of gameswf engine into advance()
	* gameswf/samples/video.(fla,swf): updated, added onStatus function
	* gameswf/win32/VC8/gameswf.vcproj: added new files
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h): added on_status handler
	* gameswf/gameswf_as_classes/as_netconnection.(cpp,h): added 
	NetConnection class for local file system
	
2007-03-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed #1229756 bug

2007-03-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_movie.h: added get_member("_target") &
	set_member("_name")
	* gameswf/gameswf_impl.cpp: commented set_name("_root"),
	by default root has no name
	* gameswf/gameswf_action.cpp: removed assert from trace when object==null