@@ -1,5 +1,14 @@
 2007-03-010  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_mutex.(cpp,h): added tu_mutex type,
+	We have redefined SDL mutex functions that
+	there was an opportunity to use other libraries (pthread, ...)
+	* gameswf/gameswf_sound_handler.(cpp,h):
+	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
+	SDL_Mutex ==> tu_mutex
+
+2007-03-010  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_sound_handler.(cpp,h):
 	hash< as_object_interface*, .. ==> hash< smart_ptr<as_object_interface>, ..
 	to prevent premature deleting of object
